--- a/stm32_sim868.ioc
+++ b/stm32_sim868.ioc
@@ -47,7 +47,7 @@ FREERTOS.configMINIMAL_STACK_SIZE=256
 FREERTOS.configQUEUE_REGISTRY_SIZE=4
 FREERTOS.configTIMER_QUEUE_LENGTH=8
 FREERTOS.configTIMER_TASK_STACK_DEPTH=256
-FREERTOS.configTOTAL_HEAP_SIZE=20480
+FREERTOS.configTOTAL_HEAP_SIZE=25600
 FREERTOS.configUSE_IDLE_HOOK=1
 File.Version=6
 I2C1.I2C_Mode=I2C_Fast
@@ -56,15 +56,16 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=FREERTOS
+Mcu.IP10=USART3
 Mcu.IP2=I2C1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IP7=UART4
-Mcu.IP8=UART5
-Mcu.IP9=USART3
-Mcu.IPNb=10
+Mcu.IP5=RTC
+Mcu.IP6=SYS
+Mcu.IP7=TIM2
+Mcu.IP8=UART4
+Mcu.IP9=UART5
+Mcu.IPNb=11
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
@@ -78,9 +79,11 @@ Mcu.Pin15=PD2
 Mcu.Pin16=PB7
 Mcu.Pin17=PB8
 Mcu.Pin18=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin19=VP_SYS_VS_tim1
+Mcu.Pin19=VP_RTC_VS_RTC_Activate
 Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=VP_RTC_VS_RTC_Calendar
+Mcu.Pin21=VP_SYS_VS_tim1
+Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -88,7 +91,7 @@ Mcu.Pin6=PB10
 Mcu.Pin7=PB11
 Mcu.Pin8=PD12
 Mcu.Pin9=PD13
-Mcu.PinsNb=21
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -215,7 +218,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_RTC_Init-RTC-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV16
@@ -242,33 +245,45 @@ RCC.PLLN=336
 RCC.PLLQ=7
 RCC.PLLQCLKFreq_Value=48000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSI
+RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_HSE_DIV25
 RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
-RCC.RCC_RTC_Clock_Source_FROM_HSE=RCC_RTCCLKSOURCE_HSE_DIV19
-RCC.RTCFreq_Value=32000
-RCC.RTCHSEDivFreq_Value=421052.63157894736
+RCC.RCC_RTC_Clock_Source_FROM_HSE=RCC_RTCCLKSOURCE_HSE_DIV25
+RCC.RTCFreq_Value=320000
+RCC.RTCHSEDivFreq_Value=320000
 RCC.SYSCLKFreq_VALUE=168000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
+RTC.Date=1
+RTC.Format=RTC_FORMAT_BIN
+RTC.IPParameters=Format,Year,SynchPrediv,WeekDay,Month,Date
+RTC.Month=RTC_MONTH_JANUARY
+RTC.SynchPrediv=2499
+RTC.WeekDay=RTC_WEEKDAY_MONDAY
+RTC.Year=0
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger
-TIM2.Period=999
-TIM2.Prescaler=20999
+TIM2.Period=124
+TIM2.Prescaler=41999
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 UART4.BaudRate=9600
 UART4.IPParameters=VirtualMode,BaudRate
 UART4.VirtualMode=Asynchronous
-UART5.BaudRate=38400
+UART5.BaudRate=115200
 UART5.IPParameters=VirtualMode,Mode,BaudRate
 UART5.Mode=MODE_TX_RX
 UART5.VirtualMode=Asynchronous
-USART3.IPParameters=VirtualMode
+USART3.BaudRate=500000
+USART3.IPParameters=VirtualMode,BaudRate
 USART3.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
