--- a/stm32_sim868.ioc
+++ b/stm32_sim868.ioc
@@ -22,6 +22,10 @@ Dma.USART3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART3_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.USART3_TX.1.Priority=DMA_PRIORITY_MEDIUM
 Dma.USART3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+FATFS.IPParameters=_USE_LABEL,_MAX_SS,_MULTI_PARTITION
+FATFS._MAX_SS=512
+FATFS._MULTI_PARTITION=0
+FATFS._USE_LABEL=1
 FREERTOS.BinarySemaphores01=binSem,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=5
@@ -55,40 +59,47 @@ I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
-Mcu.IP1=FREERTOS
-Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IP7=UART4
-Mcu.IP8=UART5
-Mcu.IP9=USART3
-Mcu.IPNb=10
+Mcu.IP1=FATFS
+Mcu.IP10=USART2
+Mcu.IP11=USART3
+Mcu.IP2=FREERTOS
+Mcu.IP3=I2C1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI1
+Mcu.IP7=SYS
+Mcu.IP8=TIM2
+Mcu.IP9=UART4
+Mcu.IPNb=12
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PD14
-Mcu.Pin11=PD15
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PC12
-Mcu.Pin15=PD2
-Mcu.Pin16=PB7
-Mcu.Pin17=PB8
-Mcu.Pin18=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin19=VP_SYS_VS_tim1
+Mcu.Pin10=PB11
+Mcu.Pin11=PD12
+Mcu.Pin12=PD13
+Mcu.Pin13=PD14
+Mcu.Pin14=PD15
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PD5
+Mcu.Pin18=PD6
+Mcu.Pin19=PB5
 Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PB7
+Mcu.Pin21=PB8
+Mcu.Pin22=VP_FATFS_VS_Generic
+Mcu.Pin23=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin24=VP_SYS_VS_tim1
+Mcu.Pin25=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
-Mcu.Pin6=PB10
-Mcu.Pin7=PB11
-Mcu.Pin8=PD12
-Mcu.Pin9=PD13
-Mcu.PinsNb=21
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB10
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -105,6 +116,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -112,7 +124,7 @@ NVIC.TIM2_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UART4_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
-NVIC.UART5_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
+NVIC.USART2_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
 NVIC.USART3_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Mode=Asynchronous
@@ -135,6 +147,12 @@ PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA3.Locked=true
 PA3.Signal=GPIO_Output
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=TX3
 PB10.Mode=Asynchronous
@@ -143,6 +161,10 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=RX3
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=SD_CS
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=SDA1
 PB7.Mode=I2C
@@ -151,8 +173,6 @@ PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=SCL1
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
-PC12.Mode=Asynchronous
-PC12.Signal=UART5_TX
 PCC.Checker=false
 PCC.Line=STM32F407/417
 PCC.MCU=STM32F407V(E-G)Tx
@@ -182,8 +202,10 @@ PD15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PD15.GPIO_PuPd=GPIO_PULLUP
 PD15.Locked=true
 PD15.Signal=GPIO_Output
-PD2.Mode=Asynchronous
-PD2.Signal=UART5_RX
+PD5.Mode=Asynchronous
+PD5.Signal=USART2_TX
+PD6.Mode=Asynchronous
+PD6.Signal=USART2_RX
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -215,7 +237,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_FATFS_Init-FATFS-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV16
@@ -253,6 +275,12 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI1.CalculateBaudRate=42.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger
 TIM2.Period=124
@@ -261,13 +289,13 @@ TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 UART4.BaudRate=9600
 UART4.IPParameters=VirtualMode,BaudRate
 UART4.VirtualMode=Asynchronous
-UART5.BaudRate=115200
-UART5.IPParameters=VirtualMode,Mode,BaudRate
-UART5.Mode=MODE_TX_RX
-UART5.VirtualMode=Asynchronous
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
 USART3.BaudRate=500000
 USART3.IPParameters=VirtualMode,BaudRate
 USART3.VirtualMode=VM_ASYNC
+VP_FATFS_VS_Generic.Mode=User_defined
+VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim1.Mode=TIM1
