--- a/stm32_sim868.ioc
+++ b/stm32_sim868.ioc
@@ -1,31 +1,31 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=UART4_TX
-Dma.Request1=USART3_TX
+Dma.Request0=USART3_TX
+Dma.Request1=UART4_TX
 Dma.RequestsNb=2
-Dma.UART4_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.UART4_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.UART4_TX.0.Instance=DMA1_Stream4
-Dma.UART4_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.UART4_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.UART4_TX.0.Mode=DMA_NORMAL
-Dma.UART4_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.UART4_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.UART4_TX.0.Priority=DMA_PRIORITY_HIGH
-Dma.UART4_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART3_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART3_TX.1.Instance=DMA1_Stream3
-Dma.USART3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART3_TX.1.Mode=DMA_NORMAL
-Dma.USART3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_TX.1.Priority=DMA_PRIORITY_MEDIUM
-Dma.USART3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.UART4_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART4_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART4_TX.1.Instance=DMA1_Stream4
+Dma.UART4_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART4_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.UART4_TX.1.Mode=DMA_NORMAL
+Dma.UART4_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART4_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.UART4_TX.1.Priority=DMA_PRIORITY_HIGH
+Dma.UART4_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART3_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_TX.0.Instance=DMA1_Stream3
+Dma.USART3_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.0.Mode=DMA_NORMAL
+Dma.USART3_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.0.Priority=DMA_PRIORITY_MEDIUM
+Dma.USART3_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FATFS.IPParameters=_USE_LABEL,_MAX_SS,_MULTI_PARTITION
 FATFS._MAX_SS=512
 FATFS._MULTI_PARTITION=0
-FATFS._USE_LABEL=1
+FATFS._USE_LABEL=0
 FREERTOS.BinarySemaphores01=binSem,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=5
@@ -45,7 +45,7 @@ FREERTOS.INCLUDE_xTaskResumeFromISR=1
 FREERTOS.INCLUDE_xTimerPendFunctionCall=1
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configUSE_IDLE_HOOK,INCLUDE_vTaskDelayUntil,INCLUDE_xQueueGetMutexHolder,INCLUDE_xSemaphoreGetMutexHolder,INCLUDE_pcTaskGetTaskName,INCLUDE_xTaskGetCurrentTaskHandle,INCLUDE_xTimerPendFunctionCall,INCLUDE_xTaskAbortDelay,INCLUDE_xTaskGetHandle,INCLUDE_eTaskGetState,INCLUDE_xEventGroupSetBitFromISR,FootprintOK,Queues01,INCLUDE_vTaskCleanUpResources,INCLUDE_uxTaskGetStackHighWaterMark,configMINIMAL_STACK_SIZE,HEAP_NUMBER,configGENERATE_RUN_TIME_STATS,INCLUDE_xTaskResumeFromISR,INCLUDE_xTaskGetSchedulerState,configTIMER_QUEUE_LENGTH,configTIMER_TASK_STACK_DEPTH,configQUEUE_REGISTRY_SIZE,BinarySemaphores01
 FREERTOS.Queues01=mailQueue,4,result_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defTask,32,1024,StartDefTask,Default,NULL,Dynamic,NULL,NULL;sensTask,24,768,StartSensTask,Default,NULL,Dynamic,NULL,NULL;atTask,40,1024,StartAtTask,Default,NULL,Dynamic,NULL,NULL;gpsTask,26,2048,StartGpsTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defTask,32,2048,StartDefTask,Default,NULL,Dynamic,NULL,NULL;sensTask,24,768,StartSensTask,Default,NULL,Dynamic,NULL,NULL;atTask,40,1024,StartAtTask,Default,NULL,Dynamic,NULL,NULL;gpsTask,26,2048,StartGpsTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configGENERATE_RUN_TIME_STATS=0
 FREERTOS.configMINIMAL_STACK_SIZE=256
 FREERTOS.configQUEUE_REGISTRY_SIZE=4
@@ -82,16 +82,17 @@ Mcu.Pin13=PD14
 Mcu.Pin14=PD15
 Mcu.Pin15=PA13
 Mcu.Pin16=PA14
-Mcu.Pin17=PD5
-Mcu.Pin18=PD6
-Mcu.Pin19=PB5
+Mcu.Pin17=PC10
+Mcu.Pin18=PD5
+Mcu.Pin19=PD6
 Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=PB7
-Mcu.Pin21=PB8
-Mcu.Pin22=VP_FATFS_VS_Generic
-Mcu.Pin23=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin24=VP_SYS_VS_tim1
-Mcu.Pin25=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PB5
+Mcu.Pin21=PB7
+Mcu.Pin22=PB8
+Mcu.Pin23=VP_FATFS_VS_Generic
+Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin25=VP_SYS_VS_tim1
+Mcu.Pin26=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -99,7 +100,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB10
-Mcu.PinsNb=26
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -116,7 +117,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SPI1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -127,8 +128,11 @@ NVIC.UART4_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.USART2_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
 NVIC.USART3_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0-WKUP.Mode=Asynchronous
-PA0-WKUP.Signal=UART4_TX
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA0-WKUP.GPIO_Label=USER_IN
+PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPIO_Input
 PA1.Mode=Asynchronous
 PA1.Signal=UART4_RX
 PA13.Mode=Serial_Wire
@@ -173,6 +177,8 @@ PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=SCL1
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
+PC10.Mode=Asynchronous
+PC10.Signal=UART4_TX
 PCC.Checker=false
 PCC.Line=STM32F407/417
 PCC.MCU=STM32F407V(E-G)Tx
