--- a/stm32_sim868.ioc
+++ b/stm32_sim868.ioc
@@ -1,7 +1,21 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=USART3_TX
 Dma.Request1=UART4_TX
-Dma.RequestsNb=2
+Dma.Request2=SPI3_TX
+Dma.RequestsNb=3
+Dma.SPI3_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI3_TX.2.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SPI3_TX.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SPI3_TX.2.Instance=DMA1_Stream5
+Dma.SPI3_TX.2.MemBurst=DMA_MBURST_SINGLE
+Dma.SPI3_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI3_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI3_TX.2.Mode=DMA_NORMAL
+Dma.SPI3_TX.2.PeriphBurst=DMA_PBURST_SINGLE
+Dma.SPI3_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI3_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI3_TX.2.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI3_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.UART4_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.UART4_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.UART4_TX.1.Instance=DMA1_Stream4
@@ -60,18 +74,19 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=FATFS
-Mcu.IP10=UART4
-Mcu.IP11=USART2
-Mcu.IP12=USART3
+Mcu.IP10=TIM2
+Mcu.IP11=UART4
+Mcu.IP12=USART2
+Mcu.IP13=USART3
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C1
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=RTC
 Mcu.IP7=SPI1
-Mcu.IP8=SYS
-Mcu.IP9=TIM2
-Mcu.IPNb=13
+Mcu.IP8=SPI3
+Mcu.IP9=SYS
+Mcu.IPNb=14
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
@@ -84,26 +99,31 @@ Mcu.Pin14=PD15
 Mcu.Pin15=PA13
 Mcu.Pin16=PA14
 Mcu.Pin17=PC10
-Mcu.Pin18=PD5
-Mcu.Pin19=PD6
+Mcu.Pin18=PC11
+Mcu.Pin19=PC12
 Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=PB5
-Mcu.Pin21=PB7
-Mcu.Pin22=PB8
-Mcu.Pin23=VP_FATFS_VS_Generic
-Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin25=VP_RTC_VS_RTC_Activate
-Mcu.Pin26=VP_RTC_VS_RTC_Calendar
-Mcu.Pin27=VP_SYS_VS_tim1
-Mcu.Pin28=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PD5
+Mcu.Pin21=PD6
+Mcu.Pin22=PB3
+Mcu.Pin23=PB4
+Mcu.Pin24=PB5
+Mcu.Pin25=PB6
+Mcu.Pin26=PB7
+Mcu.Pin27=PB8
+Mcu.Pin28=VP_FATFS_VS_Generic
+Mcu.Pin29=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin3=PA1
+Mcu.Pin30=VP_RTC_VS_RTC_Activate
+Mcu.Pin31=VP_RTC_VS_RTC_Calendar
+Mcu.Pin32=VP_SYS_VS_tim1
+Mcu.Pin33=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB10
-Mcu.PinsNb=29
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -112,6 +132,7 @@ MxDb.Version=DB.5.0.20
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream3_IRQn=true\:3\:0\:true\:false\:true\:false\:false\:true
 NVIC.DMA1_Stream4_IRQn=true\:1\:0\:true\:false\:true\:false\:false\:true
+NVIC.DMA1_Stream5_IRQn=true\:5\:0\:true\:false\:true\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.I2C1_ER_IRQn=true\:4\:0\:true\:false\:true\:false\:true\:true
@@ -122,6 +143,7 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.RCC_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.SPI3_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -169,10 +191,22 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=RX3
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=OLED_SCK
+PB3.Mode=TX_Only_Simplex_Unidirect_Master
+PB3.Signal=SPI3_SCK
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=OLED_CS
+PB4.Locked=true
+PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=SD_CS
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=OLED_DC
+PB6.Locked=true
+PB6.Signal=GPIO_Output
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=SDA1
 PB7.Mode=I2C
@@ -183,6 +217,14 @@ PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PC10.Mode=Asynchronous
 PC10.Signal=UART4_TX
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=OLED_RST
+PC11.Locked=true
+PC11.Signal=GPIO_Output
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=OLED_MOSI
+PC12.Mode=TX_Only_Simplex_Unidirect_Master
+PC12.Signal=SPI3_MOSI
 PCC.Checker=false
 PCC.Line=STM32F407/417
 PCC.MCU=STM32F407V(E-G)Tx
@@ -247,7 +289,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_FATFS_Init-FATFS-false-HAL-true,11-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_FATFS_Init-FATFS-false-HAL-true,11-MX_RTC_Init-RTC-false-HAL-true,12-MX_SPI3_Init-SPI3-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV16
@@ -264,7 +306,8 @@ RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
 RCC.PLLCLKFreq_Value=168000000
@@ -296,6 +339,12 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI3.CalculateBaudRate=5.25 MBits/s
+SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI3.Mode=SPI_MODE_MASTER
+SPI3.VirtualType=VM_MASTER
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger
 TIM2.Period=124
@@ -304,7 +353,8 @@ TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 UART4.BaudRate=9600
 UART4.IPParameters=VirtualMode,BaudRate
 UART4.VirtualMode=Asynchronous
-USART2.IPParameters=VirtualMode
+USART2.IPParameters=VirtualMode,Mode
+USART2.Mode=MODE_TX_RX
 USART2.VirtualMode=VM_ASYNC
 USART3.BaudRate=500000
 USART3.IPParameters=VirtualMode,BaudRate
