--- a/stm32_sim868.ioc
+++ b/stm32_sim868.ioc
@@ -267,7 +267,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_FATFS_Init-FATFS-false-HAL-true,11-MX_RTC_Init-RTC-false-HAL-true,12-MX_SPI3_Init-SPI3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_SPI3_Init-SPI3-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV16
@@ -306,10 +306,7 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 RTC.Format=RTC_FORMAT_BIN
-RTC.Hours=0
-RTC.IPParameters=SynchPrediv,Format,Hours,Minutes,Seconds
-RTC.Minutes=0
-RTC.Seconds=0
+RTC.IPParameters=SynchPrediv,Format
 RTC.SynchPrediv=2499
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI3.CalculateBaudRate=5.25 MBits/s
