--- a/stm32_sim868.ioc
+++ b/stm32_sim868.ioc
@@ -84,31 +84,32 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PD15
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PC10
-Mcu.Pin14=PC11
-Mcu.Pin15=PC12
-Mcu.Pin16=PB3
-Mcu.Pin17=PB4
-Mcu.Pin18=PB6
-Mcu.Pin19=PB7
+Mcu.Pin10=PD14
+Mcu.Pin11=PD15
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PC10
+Mcu.Pin15=PC11
+Mcu.Pin16=PC12
+Mcu.Pin17=PB3
+Mcu.Pin18=PB4
+Mcu.Pin19=PB6
 Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=PB8
-Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin22=VP_RTC_VS_RTC_Activate
-Mcu.Pin23=VP_RTC_VS_RTC_Calendar
-Mcu.Pin24=VP_SYS_VS_tim1
-Mcu.Pin25=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PB7
+Mcu.Pin21=PB8
+Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin23=VP_RTC_VS_RTC_Activate
+Mcu.Pin24=VP_RTC_VS_RTC_Calendar
+Mcu.Pin25=VP_SYS_VS_tim1
+Mcu.Pin26=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PA1
-Mcu.Pin4=PA3
-Mcu.Pin5=PB10
-Mcu.Pin6=PB11
-Mcu.Pin7=PD12
-Mcu.Pin8=PD13
-Mcu.Pin9=PD14
-Mcu.PinsNb=26
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PB10
+Mcu.Pin7=PB11
+Mcu.Pin8=PD12
+Mcu.Pin9=PD13
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -148,6 +149,11 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA2.GPIO_Label=GSM_STATUS
+PA2.GPIO_PuPd=GPIO_PULLDOWN
+PA2.Locked=true
+PA2.Signal=GPIO_Input
 PA3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA3.GPIO_Label=GSM_KEY
 PA3.GPIO_PuPd=GPIO_PULLUP
@@ -252,7 +258,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true,9-MX_RTC_Init-RTC-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV16
