--- a/stm32_sim868.ioc
+++ b/stm32_sim868.ioc
@@ -37,7 +37,7 @@ Dma.USART3_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART3_TX.0.Priority=DMA_PRIORITY_MEDIUM
 Dma.USART3_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.BinarySemaphores01=binSem,Dynamic,NULL
-FREERTOS.FootprintOK=true
+FREERTOS.FootprintOK=false
 FREERTOS.HEAP_NUMBER=5
 FREERTOS.INCLUDE_eTaskGetState=1
 FREERTOS.INCLUDE_pcTaskGetTaskName=1
@@ -55,7 +55,7 @@ FREERTOS.INCLUDE_xTaskResumeFromISR=1
 FREERTOS.INCLUDE_xTimerPendFunctionCall=1
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configUSE_IDLE_HOOK,INCLUDE_vTaskDelayUntil,INCLUDE_xQueueGetMutexHolder,INCLUDE_xSemaphoreGetMutexHolder,INCLUDE_pcTaskGetTaskName,INCLUDE_xTaskGetCurrentTaskHandle,INCLUDE_xTimerPendFunctionCall,INCLUDE_xTaskAbortDelay,INCLUDE_xTaskGetHandle,INCLUDE_eTaskGetState,INCLUDE_xEventGroupSetBitFromISR,FootprintOK,Queues01,INCLUDE_vTaskCleanUpResources,INCLUDE_uxTaskGetStackHighWaterMark,configMINIMAL_STACK_SIZE,HEAP_NUMBER,configGENERATE_RUN_TIME_STATS,INCLUDE_xTaskResumeFromISR,INCLUDE_xTaskGetSchedulerState,configTIMER_QUEUE_LENGTH,configTIMER_TASK_STACK_DEPTH,configQUEUE_REGISTRY_SIZE,BinarySemaphores01
 FREERTOS.Queues01=mailQueue,4,result_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defTask,32,2048,StartDefTask,Default,NULL,Dynamic,NULL,NULL;sensTask,24,1024,StartSensTask,Default,NULL,Dynamic,NULL,NULL;atTask,40,4096,StartAtTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defTask,32,2048,StartDefTask,Default,NULL,Dynamic,NULL,NULL;sensTask,24,1024,StartSensTask,Default,NULL,Dynamic,NULL,NULL;atTask,40,6144,StartAtTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configGENERATE_RUN_TIME_STATS=0
 FREERTOS.configMINIMAL_STACK_SIZE=256
 FREERTOS.configQUEUE_REGISTRY_SIZE=4
@@ -70,46 +70,51 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=FREERTOS
-Mcu.IP10=USART3
+Mcu.IP10=UART4
+Mcu.IP11=USART3
 Mcu.IP2=I2C1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=RTC
-Mcu.IP6=SPI3
-Mcu.IP7=SYS
-Mcu.IP8=TIM2
-Mcu.IP9=UART4
-Mcu.IPNb=11
+Mcu.IP6=SPI1
+Mcu.IP7=SPI3
+Mcu.IP8=SYS
+Mcu.IP9=TIM2
+Mcu.IPNb=12
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PD14
-Mcu.Pin11=PD15
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PC10
-Mcu.Pin15=PC11
-Mcu.Pin16=PC12
-Mcu.Pin17=PB3
-Mcu.Pin18=PB4
-Mcu.Pin19=PB6
+Mcu.Pin10=PB10
+Mcu.Pin11=PB11
+Mcu.Pin12=PD12
+Mcu.Pin13=PD13
+Mcu.Pin14=PD14
+Mcu.Pin15=PD15
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PC10
+Mcu.Pin19=PC11
 Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=PB7
-Mcu.Pin21=PB8
-Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin23=VP_RTC_VS_RTC_Activate
-Mcu.Pin24=VP_RTC_VS_RTC_Calendar
-Mcu.Pin25=VP_SYS_VS_tim1
-Mcu.Pin26=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PC12
+Mcu.Pin21=PB3
+Mcu.Pin22=PB4
+Mcu.Pin23=PB6
+Mcu.Pin24=PB7
+Mcu.Pin25=PB8
+Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin27=VP_RTC_VS_RTC_Activate
+Mcu.Pin28=VP_RTC_VS_RTC_Calendar
+Mcu.Pin29=VP_SYS_VS_tim1
 Mcu.Pin3=PA1
+Mcu.Pin30=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
-Mcu.Pin6=PB10
-Mcu.Pin7=PB11
-Mcu.Pin8=PD12
-Mcu.Pin9=PD13
-Mcu.PinsNb=27
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -128,6 +133,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.RCC_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.SPI1_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
 NVIC.SPI3_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
@@ -160,6 +166,23 @@ PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA3.Locked=true
 PA3.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA4.GPIO_Label=W25_CS
+PA4.GPIO_PuPd=GPIO_PULLUP
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=W25_SCK
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=W25_MISO
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=W25_MOSI
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=TX3
 PB10.Mode=Asynchronous
@@ -299,6 +322,11 @@ RCC.VcooutputI2S=96000000
 RTC.Format=RTC_FORMAT_BIN
 RTC.IPParameters=SynchPrediv,Format
 RTC.SynchPrediv=2499
+SPI1.CalculateBaudRate=42.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI3.CalculateBaudRate=5.25 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
